--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -66,17 +66,6 @@
 	/*margin: 0px auto;*/
 	/*margin-top: 30%;*/
 }
-.wui-appParticipantResult-Cover .wui-qrcode{
-	background: rgba(0, 0, 0, 0) url("/static_v2/img/qrcode.png") no-repeat scroll 0 0 / 100% auto;
-    border-radius: 3px;
-    height: 75%;
-    left: 4%;
-    padding-left: 15%;
-    padding-top: 5%;
-    position: fixed;
-    top: 10%;
-    width: 75%;
-}
 .wui-appParticipantResult-Cover .wui-i-successIcon {
 	border: 5px solid #59c969;
     border-radius: 50%;
@@ -720,12 +709,15 @@ p.wui-i-start_time,p.wui-i-end_time{
     height: 45px;
 }
 /*需关注可参与*/
+.wui-appParticipantResult-Cover .wui-i-topText{
+	text-align: center;
+}
 .wui-appParticipantResult-Cover .wui-i-permissionIcon {
     border: 1px solid #b20000;
     border-radius: 50%;
     color: #b20000;
     display: inline-block;
-    font-size: 20px;
+    font-size: 18px;
     height: 20px;
     line-height: 20px;
     margin: 0 5px 5px auto;
@@ -735,10 +727,15 @@ p.wui-i-start_time,p.wui-i-end_time{
 .wui-appParticipantResult-Cover .wui-i-permissionText {
     color: #b20000;
     display: inline-block;
-    font-size: 18px;
     line-height: 30px;
-    margin-top: 4%;
     text-align: center;
+}
+.wui-appParticipantResult-Cover .wui-i-qrcode{
+	padding-top:10px;
+	padding-bottom: 10px;
+}
+.wui-appParticipantResult-Cover .wui-i-bottomText{
+
 }
 /*无需关注即可参与*/
 .wui-appParticipantResult-Cover .wui-i-successQRIcon {
