优化微助力

--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -19,6 +19,9 @@
     .wui-masterinfo span{
         margin: 0 5px;
     }
+    .wui-masterinfo .wa-mypower{
+        margin: 0;
+    }
     .wui-masterinfo b {
         font-size: 0.8rem;
     }
@@ -135,7 +138,7 @@
     <div class="wui-masterinfo wa-masterinfo">
         <div style="float: left;">
             <span class="wa-myrange">我的排名: <b></b></span>
-        <span class="wa-mypower">我的助力值: <b></b></span>
+        <span class="wa-mypower">助力值: <b></b></span>
         </div>
         <div style="float: right;">
         <span class="wa-totalcount">参与人数: <b></b></span>
