--- a/weapp/termite/static/css/apps/powerme_new_year_red.css
+++ b/weapp/termite/static/css/apps/powerme_new_year_red.css
@@ -1,55 +1,57 @@
 @charset "utf-8";
 .wui-powerme-container .wui-i-body .wui-i-btngroup .wui-i-btn-using, .wui-powerme-container .wui-i-body .wui-i-btngroup .wui-i-btn-power{
-    background: #ec352d;
+    background: #fdcd01;
     border-radius: 5px;
-    border-bottom: 3px solid #c70800;
+    border-bottom: 3px solid #be5000;
+    color: #900000;
 }
 .wui-powerme-container .wui-i-body .wui-i-btngroup .wui-i-btn-closed{
-    background: #B5B5B5;
+    background: #696969;
 }
 .wui-powerme-container .wui-i-body .wui-i-btngroup .wui-i-btn-notready{
-    background: #666666;
+    background: #42000e;
+    color: #fdcd01;
 }
 .wui-powerme-container .wui-i-body{
-    background: #ff7d42;
+    background: #900000;
     padding: 10px 0 50px;
 }
 .wui-powerme-container .wui-i-timing i{
     background-position: -45px -37px;
 }
 .wui-powerme-container .wui-i-rules .wui-i-star, .wui-powerme-container .wui-i-states .wui-i-star{
-    background-position: -94px -38px;
+    background-position: -147px -38px;
+}
+.wui-powerme-container .wui-i-states ul li:not(.wui-i-top100-title){
+    border-bottom: 1px dotted #b78575;
 }
 .wui-i-description-content {
-    color: #ce4000;
+    color: #42000e;
 }
 .wui-masterinfo b{
-    color: #ff7d42;
+    color: #e63041;
 }
 .wui-powerme-container .wui-i-rules b, .wui-powerme-container .wui-i-states b{
-    color: #9d3100;
+    color: #fff873;
 }
 .wui-i-rules-content {
     color: #fff;
 }
 .wui-powerme-container .wui-i-rules, .wui-powerme-container .wui-i-states{
-    border-top: 1px solid #9d3100;
+    border-top: 1px solid #b24b23;
 }
-.wui-powerme-container .wui-i-rules-title-content,.wui-powerme-container .wui-i-helper-title-content{
-    background: #ff7d42;
+.wui-powerme-container .wui-i-rules-title-content,.wui-powerme-container .wui-i-helper-title-content {
+    background: #900000;
 }
 .wui-powerme-container .wui-i-timing{
     color: #fff;
 }
 .wui-powerme-container .wui-i-top100-title{
-    color: #642100;
+    color: #e63041;
 }
 .wui-i-top100-name {
-    color: #9b2f00;
+    color: #ffffff;
 }
 .wui-i-top100-power {
-    color: #fff;
-}
-.wui-powerme-container .wui-i-states ul li:not(.wui-i-top100-title){
-    border-bottom: 1px dotted #ddad87;
+    color: #fff453
 }
