--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -1,9 +1,23 @@
 {% load workbench_filter %}
 {% block css %}
 <link type="text/css" rel="stylesheet" media="all" href="/termite_static/css/apps/powerme.css">
-<link type="text/css" rel="stylesheet" media="all" href="/termite_static/css/apps/powerme_red.css" id="css_red" {% if component.model.color == 'red' %}{% else %}disabled=" true"{% endif %}>
-<link type="text/css" rel="stylesheet" media="all" href="/termite_static/css/apps/powerme_orange.css" id="css_orange" {% if component.model.color == 'orange' %}{% else %}disabled=" true"{% endif %}>
-<link type="text/css" rel="stylesheet" media="all" href="/termite_static/css/apps/powerme_yellow.css" id="css_yellow" {% if component.model.color %}{% if component.model.color == 'yellow' %}{% else %}disabled=" true"{% endif %}{% endif %}>
+<link type="text/css" rel="stylesheet" media="all" id="powerme_css"
+    {% if component.model.color %}
+        {% if component.model.color == 'yellow' %}
+          href="/termite_static/css/apps/powerme_yellow.css" {% else %}
+          {% if component.model.color == 'orange' %}
+              href="/termite_static/css/apps/powerme_orange.css" {% else %}
+            {% if component.model.color == 'red' %}
+                href="/termite_static/css/apps/powerme_red.css" {% else %}
+                {% if component.model.color == 'new_year_red' %}
+                    href="/termite_static/css/apps/powerme_new_year_red.css"
+                {% endif %}
+            {% endif %}
+          {% endif %}
+        {% endif %}
+    {% else %}
+        href="/termite_static/css/apps/powerme_yellow.css"
+    {% endif %}>
 {% endblock %}
 
 {% ifequal component.type 'appkit.powermedescription' %}
