--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -66,7 +66,7 @@
 
 				<div class="xui-fieldwrap">
 	        		<div class="xui-name">绑定手机：</div>
-	        		<div class="xui-value "><input  class="form-control" id="phone_number" value="{{show_member_info.phone_number}}"  type="text" data-validate="norequire,,require-mobile-phone::请输入正确的手机号" placeholder="11位手机号">
+	        		<div class="xui-value "><input  class="form-control" id="phone_number" value="{% ifequal show_member_info.is_binded 1 %}{{show_member_info.phone_number}}{% endifequal %}"  type="text" data-validate="norequire,,require-mobile-phone::请输入正确的手机号" placeholder="11位手机号">
 	        		<div class="errorHint"></div>
 	        		</div>
 	        		<div class="xui-name">上次交易时间：</div>
@@ -434,7 +434,7 @@
 			memberId: memberId,
 		})
         memberIntegralUpdateView.render();
-       
+
 	});
 	$('.relation-text').click(function(event) {
 				var _this = this;
