百宝箱投票 1、重构统计代码 2、样式调整

--- a/weapp/apps/customerized_apps/vote/templates/editor/vote_statistic.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/vote_statistic.html
@@ -135,7 +135,7 @@
             method: 'get',
             app: 'apps/vote',
             resource: 'vote_statistic-export',
-            args: {'export_id':export_id},
+            args: {'id':export_id},
             success: function(resp){
                 if(resp.code == 200){
                     $('#export_href').prop({
