--- a/weapp/apps/customerized_apps/vote/templates/webapp/m_vote.html
+++ b/weapp/apps/customerized_apps/vote/templates/webapp/m_vote.html
@@ -128,7 +128,7 @@
                     termite_data: JSON.stringify(data),
                     actionButtons: JSON.stringify([{
                         'text': '查看结果',
-                        'url': 'm/apps/' + W.appName + '/result_vote/?webapp_owner_id=' + W.webappOwnerId + '&id=' + W.appRecordId + '&member_id={{ member_id }}&isMember={{ isMember }}'
+                        'url': window.location.search
                     }])
                 };
                 var $prizeContainer = $('.xa-prizeContainer');
