--- a/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
+++ b/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
@@ -40,22 +40,17 @@
     }
     .wa-progress-msg{
         position: absolute;
-        margin-top: -17px;
-        margin-left: 10%;
-        font-size: 0.8rem;
+        line-height: 20px;
+        width: 100%;
+        text-align: center;
+        color: #666;
     }
     .wui-selectBox-display-list label{
-        float: left;
-        display: block;
-        margin-left: -5px;
-        margin-top: 85%;
-        width: 105px;
-    }
-    .mask{
         position: absolute;
-        z-index: 999;
-        height: 90%;
-        width: 100%;
+        display: inline-block;
+        margin-left: -5px;
+        width: 45%;
+        bottom: 20px;
     }
     .wui-image-selected{
         border: 1px solid #19A4F9;
@@ -63,15 +58,43 @@
     .wui-selectBox-display-table .wui-inner-selectionwithimage{
         margin-bottom: 8px;
     }
-    /*.wui-imageSelection{
-        padding: 0;
-    }*/
+    .xui-list-content{
+        top: 0;
+        position: absolute;
+        height: 100%;
+        width: 50%;
+        left: 49%
+    }
+    .xui-list-content .wui-text{
+        display: -webkit-box;
+        position: absolute;
+        font-size: 14px;
+        word-break: break-all;
+        margin-top: 10px;
+    }
+    .xui-list-content .xui-progress-list{
+        position:absolute;
+        height:20px;
+        width:100%;
+        background-color: #eee;
+        bottom: 10px;
+    }
+    .xui-progressBar{
+        position: absolute;
+        background: #1BA3F9;
+        vertical-align: middle;
+        height: 20px;
+    }
+    .wui-selectBox-display-list .wui-inner-selectionwithimage-list {
+        position: relative;
+        height: 100%;
+        width: 45%;
+    }
     </style>
 
 {% endblock %}
 
 {% block content-panel %}
-    <div class="mask"></div>
     <div class="wa-page xui-default-background" data-page-title="">
         <div class="wui-surveyDescription xa-prizeContainer" style="min-height:100px; background-color:#FFF;" data-component-cid="2">
             <h1 class="wui-i-title xa-title">{{ vote_detail.name }}</h1>
@@ -105,7 +128,7 @@
                         {{ item.title }}
                     </h1>
                     <ul class="wui-i-items xa-inputControl">
-                        {% for select in item.values %}
+                        {% for select in item.title_value %}
                             {% if item.display_type == 'table' %}
                                 <li class="wui-selectBox-display-table">
                                     <div class="wui-selectionwithimage xa-inputControl"
@@ -120,31 +143,31 @@
                                             <span class="wui-i-text">{{ select.name }}</span>
                                             </div>
                                         </div>
-                                        <label style="padding: 3px 0;">
-                                            <span data-per="{{ select.per }}" id="progressbar-{{ item.title }}-{{ select.id_name }}" class="progressbar"></span>
-                                            <span class="wa-progress-msg">{{ select.count }}票&nbsp;&nbsp;{{ select.per }}%</span>
-                                        </label>
+                                        <div style="background-color: #eee;position: relative;width: 100%;height: 20px">
+                                            <span class="xui-progressBar" style="width: {% ifequal select.percent '0%' %}0{% else %}{{ select.percent }}{% endifequal %}"></span>
+                                            <span style="position: absolute;width: 100%;text-align: center;color: #666;line-height: 20px;">{{ select.counter }}票&nbsp;&nbsp;{{ select.percent }}</span>
+                                        </div>
                                     </div>
                                 </li>
                             {% else %}
-                                <li class="wui-selectBox-display-list">
-                                    <div class="wui-selectionwithimage xa-inputControl"
+                                <li class="wui-selectBox-display-list {% if select.isSelect %}wui-image-selected{% endif %}" style="position: relative;margin-bottom: 10px;">
+                                    <div style="display: block;margin-bottom:0;" class="wui-selectionwithimage xa-inputControl"
                                         data-type="radio"
                                         data-input-name="{{select.name}}"
                                         data-input-type="imageselection"
                                         data-control-type="appkit.imageselection"
                                     >
-                                        <div class="wui-inner-selectionwithimage {% if select.isSelect %}wui-image-selected{% endif %}">
+                                        <div class="wui-inner-selectionwithimage-list">
                                             <div class="wui-inner-img">
-                                            <img src="{% if select.image %}{{ select.image }}{% else %}/static_v2/img/termite2/addImgBtn.png{% endif %}" class="wui-i-image">
+                                                <img src="{% if select.image %}{{ select.image }}{% else %}/static_v2/img/termite2/addImgBtn.png{% endif %}" style="position: absolute;height: 100%;">
                                             </div>
                                         </div>
-                                        <div style="position: relative;float: left;">
-                                            <span class="wui-i-text">{{ select.name }}</span>
-                                            <label style="padding: 3px 0;">
-                                                <span data-per="{{ select.per }}" id="progressbar-{{ item.title }}-{{ select.id_name }}" class="progressbar"></span>
-                                                <span class="wa-progress-msg">{{ select.count }}票&nbsp;&nbsp;{{ select.per }}%</span>
-                                            </label>
+                                        <div class="xui-list-content">
+                                            <span class="wui-text">{{ select.name }}</span>
+                                            <div class="xui-progress-list">
+                                                <span class="xui-progressBar" style="width: {% ifequal select.percent '0%' %}0{% else %}{{ select.percent }}{% endifequal %}"></span>
+                                                <span class="wa-progress-msg">{{ select.counter }}票&nbsp;&nbsp;{{ select.percent }}</span>
+                                            </div>
                                         </div>
                                     </div>
                                 </li>
@@ -160,8 +183,8 @@
                         {{ item.title }}
                     </h1>
                     <ul class="wui-i-items xa-inputControl">
-                        {% for select in item.values %}
-                        <li class="wui-i-item">
+                        {% for select in item.title_value %}
+                        <li class="wui-i-item" style="position: relative;">
                             <label style="padding: 3px 0;" >
                                 <span class="
                                     {% ifequal select.type 'radio' %}
@@ -176,9 +199,11 @@
                                         {% endifequal %}
                                     {% endifequal %}"></span>
                                 <span class="ml5 xa-itemTitle" style="margin-left: 34px!important;display: block;min-height: 22px;">{{ select.name }}</span>
-                                <span style="display: inline-block;float: right;margin-top: -15px;">{{ select.count }}票&nbsp;{{ select.per }}%</span>
-                                <span data-per="{{ select.per }}" id="progressbar-{{ item.title }}-{{ select.id_name }}" class="progressbar"></span>
+                                <span style="display: inline-block;float: right;margin-top: 0;">{{ select.counter }}票&nbsp;{{ select.percent }}</span>
                             </label>
+                            <div style="background-color: #eee;height: 20px;margin-top: 20px">
+                                <span class="xui-progressBar" style="width: {% ifequal select.percent '0%' %}0{% else %}{{ select.percent }}{% endifequal %}"></span>
+                            </div>
 
                         </li>
                         {% endfor %}
@@ -190,7 +215,7 @@
                     <li class="wui-i-item">
                         <label class="wui-i-label">{{ item.title }}</label>
                         <div class="wui-i-inputContainer xa-inputControl" >
-                            <input class="wui-i-input" type="text"  placeholder="" value="{{ item.values }}" style="background:#fff;color:#595959;font-size:13px;" disabled>
+                            <input class="wui-i-input" type="text"  placeholder="" value="{{ item.title_value }}" style="background:#fff;color:#595959;font-size:13px;" disabled>
                         </div>
                     </li>
                 </ul>
@@ -209,11 +234,6 @@
     <script type="text/javascript" src="/termite_static/v3/gmu/widget/progressbar.js"></script>
     <script type="text/javascript">
     $(document).ready(function() {
-        $('.progressbar').each(function(){
-            $(this).progressbar({
-                initValue: $(this).attr('data-per')
-            });
-        });
         $('.xa-toUserCenter').on('click', function(event) {
             if (W.isMember){
                 redirectTo('/termite/workbench/jqm/preview/?module=user_center&model=user_info&action=get&workspace_id=mall&webapp_owner_id='+W.webappOwnerId);
