--- a/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
+++ b/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
@@ -105,7 +105,7 @@
                         {{ item.title }}
                     </h1>
                     <ul class="wui-i-items xa-inputControl">
-                        {% for select in item.values %}
+                        {% for select in item.title_value %}
                             {% if item.display_type == 'table' %}
                                 <li class="wui-selectBox-display-table">
                                     <div class="wui-selectionwithimage xa-inputControl"
@@ -121,8 +121,8 @@
                                             </div>
                                         </div>
                                         <label style="padding: 3px 0;">
-                                            <span data-per="{{ select.per }}" id="progressbar-{{ item.title }}-{{ select.id_name }}" class="progressbar"></span>
-                                            <span class="wa-progress-msg">{{ select.count }}票&nbsp;&nbsp;{{ select.per }}%</span>
+                                            <span data-per="{{ select.percent }}" id="progressbar-{{ item.title }}-{{ select.id_name }}" class="progressbar"></span>
+                                            <span class="wa-progress-msg">{{ select.counter }}票&nbsp;&nbsp;{{ select.percent }}</span>
                                         </label>
                                     </div>
                                 </li>
@@ -142,8 +142,8 @@
                                         <div style="position: relative;float: left;">
                                             <span class="wui-i-text">{{ select.name }}</span>
                                             <label style="padding: 3px 0;">
-                                                <span data-per="{{ select.per }}" id="progressbar-{{ item.title }}-{{ select.id_name }}" class="progressbar"></span>
-                                                <span class="wa-progress-msg">{{ select.count }}票&nbsp;&nbsp;{{ select.per }}%</span>
+                                                <span data-per="{{ select.percent }}" id="progressbar-{{ item.title }}-{{ select.id_name }}" class="progressbar"></span>
+                                                <span class="wa-progress-msg">{{ select.counter }}票&nbsp;&nbsp;{{ select.percent }}</span>
                                             </label>
                                         </div>
                                     </div>
@@ -160,7 +160,7 @@
                         {{ item.title }}
                     </h1>
                     <ul class="wui-i-items xa-inputControl">
-                        {% for select in item.values %}
+                        {% for select in item.title_value %}
                         <li class="wui-i-item">
                             <label style="padding: 3px 0;" >
                                 <span class="
@@ -176,8 +176,8 @@
                                         {% endifequal %}
                                     {% endifequal %}"></span>
                                 <span class="ml5 xa-itemTitle" style="margin-left: 34px!important;display: block;min-height: 22px;">{{ select.name }}</span>
-                                <span style="display: inline-block;float: right;margin-top: -15px;">{{ select.count }}票&nbsp;{{ select.per }}%</span>
-                                <span data-per="{{ select.per }}" id="progressbar-{{ item.title }}-{{ select.id_name }}" class="progressbar"></span>
+                                <span style="display: inline-block;float: right;margin-top: -15px;">{{ select.counter }}票&nbsp;{{ select.percent }}</span>
+                                <span data-per="{{ select.percent }}" id="progressbar-{{ item.title }}-{{ forloop.counter }}" class="progressbar"></span>
                             </label>
 
                         </li>
@@ -190,7 +190,7 @@
                     <li class="wui-i-item">
                         <label class="wui-i-label">{{ item.title }}</label>
                         <div class="wui-i-inputContainer xa-inputControl" >
-                            <input class="wui-i-input" type="text"  placeholder="" value="{{ item.values }}" style="background:#fff;color:#595959;font-size:13px;" disabled>
+                            <input class="wui-i-input" type="text"  placeholder="" value="{{ item.title_value }}" style="background:#fff;color:#595959;font-size:13px;" disabled>
                         </div>
                     </li>
                 </ul>
@@ -211,7 +211,7 @@
     $(document).ready(function() {
         $('.progressbar').each(function(){
             $(this).progressbar({
-                initValue: $(this).attr('data-per')
+                initValue: $(this).attr('data-per').split('%')[0]
             });
         });
         $('.xa-toUserCenter').on('click', function(event) {
