--- a/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
+++ b/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
@@ -70,6 +70,23 @@
     /*.wui-imageSelection{
         padding: 0;
     }*/
+    .wui-selectBox-display-list .wui-i-text{
+        display: -webkit-box;
+        position: absolute;
+        font-size: 14px;
+        word-break: break-all;
+        /*margin-top: 15px;*/
+        padding-left: 5px;
+        /*max-width: 38%;*/
+    }
+    .wui-selectBox-display-list .wui-inner-selectionwithimage{
+        width: 45%;
+        display: inline-block;
+        float: left;
+        min-width: 120px;
+        min-height: 120px;
+        margin-right: 10px;
+    }
     </style>
 
 {% endblock %}
