--- a/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
+++ b/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
@@ -49,10 +49,9 @@
     }
     .wui-selectBox-display-list label{
         position: absolute;
-        float: left;
-        display: block;
+        display: inline-block;
         margin-left: -5px;
-        width: 50%;
+        width: 45%;
         bottom: 20px;
     }
     .mask{
@@ -78,11 +77,12 @@
         /*margin-top: 15px;*/
         padding-left: 5px;
         /*max-width: 38%;*/
+        top: 0;
     }
     .wui-selectBox-display-list .wui-inner-selectionwithimage{
         width: 45%;
         display: inline-block;
-        float: left;
+        /*float: left;*/
         min-width: 120px;
         min-height: 120px;
         margin-right: 10px;
