新增工具用户反馈

--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -1,4 +1,4 @@
-{% extends "webapp_content_base_v4.html" %}
+{% extends "apps_base.html" %}
 
 {% block css %}
 <style>
@@ -292,6 +292,7 @@
 
     //发送请求，单独获取排名数据，优化首页时间
     function getDynamicData(){
+        loadingStatus(true);
         var fid = GetQueryString("fid");
         W.getApi().call({
             app: 'm/apps/powerme',
@@ -310,6 +311,8 @@
                 renderTime(data.member_info.timing);
                 //渲染排名
                 showTop100(data);
+                //隐藏loading动画元素
+                loadingStatus(false);
                 //监听分享成功事件
                 $(document).on("share:success",function(data){
                     $('.xa-share').addClass('none');
@@ -334,11 +337,15 @@
                 });
             },
             error: function(data) {
-                $("body").alert({
-                    isShow: true,
-                    info: data.errMsg,
-                    speed: 3000
-                });
+                if(data.errMsg == 'is_deleted'){
+                    deletedRecord();
+                }else{
+                    $("body").alert({
+                        isShow: true,
+                        info: data.errMsg,
+                        speed: 3000
+                    });
+                }
             }
         });
     }
@@ -351,19 +358,11 @@
         $('.wa-pageownername').html(page_owner_name);
         //检查活动状态,更新参与按钮并绑定事件
         W.activityStatus = member_info.activity_status;
+        W.isAlreadyParticipanted = member_info.is_already_participanted;
+        W.member_id = member_info.member_id;
         W.isMember = member_info.isMember;
-        //祭出顶部黄条
-        if (!W.isMember) {
-            var $att = $('.wui-attentionAlert');
-            $att.attr('data-is-show-button', 'true');
-            $att.attentionAlert();
-            $att.click(function(){
-                $(this).attentionAlert('clickGuideAttention');
-            });
-            $('.xa-mask').click(function(){
-                $(this).addClass('none');
-            });
-        }
+        //TODO 未关注会员处理
+
         is_powered = member_info.is_powered;
         page_owner_member_id = member_info.page_owner_member_id;
         updateBtnStatus();
