--- a/weapp/static_v2/js/view/common_select_website_link_view/template.html
+++ b/weapp/static_v2/js/view/common_select_website_link_view/template.html
@@ -14,8 +14,8 @@
     {{if channel_qrcode}}
     <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="channelQrcode">代言人二维码</a></li>
     {{/if}}
-    <!--{{if complain}}
-    <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="complain">用户反馈</a></li>
+    <!--{{if feedback}}
+    <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="feedback">用户反馈</a></li>
     {{/if}}-->
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="myOrder">我的订单</a></li>
     {{if shengjing}}
