--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -96,13 +96,25 @@
 						<!-- 三级导航 -->
 						{% if nav.third_navs %}
 							{% for third_nav in nav.third_navs %}
-								<li class="xui-sideBar-third {% ifequal third_nav_name third_nav.name %}active_third{% endifequal %}">
-									<a href="{{third_nav.url}}" title="{{third_nav.title}}" name="{{third_nav.name}}">
-										&nbsp;&nbsp;&nbsp;&nbsp;{{third_nav.title|safe}}
-										<i class="xui-icon-arrow"></i>
-										{% if third_nav.class_name %}<i class="xui-noticyTip {{third_nav.class_name}}"></i>{% endif %}
-									</a>
-								</li>
+                                {% if third_nav.name == 'exsurveies'%}
+                                    {% if request.manager.username in third_nav.users %}
+                                    <li class="xui-sideBar-third {% ifequal third_nav_name third_nav.name %}active_third{% endifequal %}">
+                                        <a href="{{third_nav.url}}" title="{{third_nav.title}}" name="{{third_nav.name}}">
+                                            &nbsp;&nbsp;&nbsp;&nbsp;{{third_nav.title|safe}}
+                                            <i class="xui-icon-arrow"></i>
+                                            {% if third_nav.class_name %}<i class="xui-noticyTip {{third_nav.class_name}}"></i>{% endif %}
+                                        </a>
+                                    </li>
+                                    {% endif %}
+                                {% else %}
+                                    <li class="xui-sideBar-third {% ifequal third_nav_name third_nav.name %}active_third{% endifequal %}">
+                                        <a href="{{third_nav.url}}" title="{{third_nav.title}}" name="{{third_nav.name}}">
+                                            &nbsp;&nbsp;&nbsp;&nbsp;{{third_nav.title|safe}}
+                                            <i class="xui-icon-arrow"></i>
+                                            {% if third_nav.class_name %}<i class="xui-noticyTip {{third_nav.class_name}}"></i>{% endif %}
+                                        </a>
+                                    </li>
+                                {% endif %}
 							{% endfor %}
 						{% endif %}
 					{% endfor %}
